--- a/midterm.css
+++ b/midterm.css
@@ -28,3 +28,6 @@ color:limegreen;}
 {font-family: 'Creepster', cursive;
 font-size:80px;
 color:limegreen}
+.october
+{font-family: 'Creepster', cursive;
+color:darkorange;}
